--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ script:
 # Defini que o processo de Deploy será na Plataforma Heroku. É necessário informar o nome da APP criada no Heroku
 deploy:
   provider: heroku
-  api-key: 
+  api-key: 278ee789-df9a-40fd-8a60-e24e882b3009
     secure: $HEROKU_API_KEY
 app: aqueous-temple-80707
