--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-django
-gunicorn
-django-heroku
-Pillow
+Django==2.2.4
+django-six==1.0.4
+gunicorn==19.9.0
+Pillow==6.1.0
+pkg-resources==0.0.0
+pytz==2019.2
+sqlparse==0.3.0
