--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ cupshelpers==1.0
 defer==1.0.6
 distro==1.3.0
 distro-info===0.21ubuntu2
+Django==2.2.4
 entrypoints==0.3
 gunicorn==19.9.0
 httplib2==0.11.3
@@ -50,6 +51,7 @@ requests-unixsocket==0.1.5
 SecretStorage==2.3.1
 simplejson==3.16.0
 six==1.12.0
+sqlparse==0.3.0
 system-service==0.3
 systemd-python==234
 ubuntu-advantage-tools==19.2
