--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-gunicorn==19.9.0
-httplib2==0.11.3
-Pillow==5.4.1
-PyYAML==3.13
-simplejson==3.16.0
-six==1.12.0
-sqlparse==0.3.0
-system-service==0.3
-systemd-python==234
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.24.1
-virtualenv==16.7.3
+gunicorn
+httplib2
+Pillow
+PyYAML
+simplejson
+sqlparse
+system-service
+systemd-python
+ufw
+unattended-upgrades
+urllib3
+virtualenv
