--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,41 @@
 Django
-entrypoints==0.3
-gunicorn==19.9.0
-httplib2==0.11.3
-idna==2.6
-keyring==17.1.1
-keyrings.alt==3.1.1
-launchpadlib==1.10.6
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-macaroonbakery==1.2.1
-Mako==1.0.7
-MarkupSafe==1.1.0
-netifaces==0.10.4
-oauthlib==2.1.0
-olefile==0.46
-pexpect==4.6.0
-Pillow==5.4.1
-protobuf==3.6.1
-pycairo==1.16.2
-pycrypto==2.6.1
-pycups==1.9.73
-PyJWT==1.7.0
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyRFC3339==1.1
-python-dateutil==2.7.3
-pytz==2018.9
-pyxdg==0.25
-PyYAML==3.13
-reportlab==3.5.18
-requests==2.21.0
-requests-unixsocket==0.1.5
-SecretStorage==2.3.1
-simplejson==3.16.0
-six==1.12.0
-sqlparse==0.3.0
-systemd-python==234
-urllib3==1.24.1
-virtualenv==16.7.3
-wadllib==1.3.3
+entrypoints
+gunicorn
+httplib2
+idna
+keyring
+keyrings.alt
+launchpadlib
+lazr.restfulclient
+lazr.uri
+macaroonbakery
+Mako
+MarkupSafe
+netifaces
+oauthlib
+olefile
+pexpect
+Pillow
+protobuf
+pycairo
+pycrypto
+pycups
+PyJWT
+pymacaroons
+PyNaCl
+pyRFC3339
+python-dateutil
+pytz
+pyxdg
+PyYAML
+reportlab
+requests
+requests-unixsocket
+SecretStorage
+simplejson
+six
+sqlparse
+systemd-python
+urllib3
+virtualenv
+wadllib
